--- a/configs/3020T/3020T.ini
+++ b/configs/3020T/3020T.ini
@@ -60,9 +60,12 @@ POSTGUI_HALFILE = custom_postgui.hal
 
 [HALUI]
 # add halui MDI commands here (max 64) 
+MDI_COMMAND = o100 call
 MDI_COMMAND = o101 call
 MDI_COMMAND = o102 call
 MDI_COMMAND = o103 call
+MDI_COMMAND = o104 call
+MDI_COMMAND = o105 call
 
 [TRAJ]
 AXES = 3
